--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ li {
 
 /* Set a background color and text color for the entire page */
 body {
-    background-color: #dfdfdf;
+    background-color: #f0f8ff;
     color: #333;
     font-family: Tahoma, sans-serif;
     line-height: 1.6;
